# npx-blink-led

./: Cargo.toml  README.md  memory.x
pac/: Cargo.toml  device.x
pac/src/: adc0.rs  cmp0.rs  dac0.rs  dma.rs  dmamux0.rs  flexio.rs  ftfa.rs  ftfa_flash_config.rs  gpiob.rs  i2c0.rs  i2s0.rs  lcd.rs  lib.rs  llwu.rs  lptmr0.rs  lpuart0.rs  mcg.rs  mcm.rs  mtb.rs  mtbdwt.rs  osc0.rs  pit.rs  pmc.rs  portd.rs  rcm.rs  rfsys.rs  rom.rs  rtc.rs  sim.rs  smc.rs  spi0.rs  spi1.rs  system_control.rs  tpm0.rs  tpm1.rs  uart2.rs  usb0.rs  vref.rs
pac/src/adc0/: cfg1.rs  cfg2.rs  clm0.rs  clm1.rs  clm2.rs  clm3.rs  clm4.rs  clmd.rs  clms.rs  clp0.rs  clp1.rs  clp2.rs  clp3.rs  clp4.rs  clpd.rs  clps.rs  cv.rs  mg.rs  ofs.rs  pg.rs  r.rs  sc1.rs  sc2.rs  sc3.rs
pac/src/cmp0/: cr0.rs  cr1.rs  daccr.rs  fpr.rs  muxcr.rs  scr.rs
pac/src/dac0/: c0.rs  c1.rs  c2.rs  dath.rs  datl.rs  sr.rs
pac/src/dma/: dar0.rs  dar1.rs  dar2.rs  dar3.rs  dcr0.rs  dcr1.rs  dcr2.rs  dcr3.rs  dsr0.rs  dsr1.rs  dsr2.rs  dsr3.rs  dsr_bcr0.rs  dsr_bcr1.rs  dsr_bcr2.rs  dsr_bcr3.rs  sar0.rs  sar1.rs  sar2.rs  sar3.rs
pac/src/dmamux0/: chcfg.rs
pac/src/fgpioa/: pcor.rs  pddr.rs  pdor.rs
pac/src/fgpiob/: ptor.rs
pac/src/fgpioc/: pdir.rs
pac/src/fgpioe/: psor.rs
pac/src/flexio/: ctrl.rs  param.rs  shiftbuf.rs  shiftbufbbs.rs  shiftbufbis.rs  shiftbufbys.rs  shiftcfg.rs  shiftctl.rs  shifteien.rs  shifterr.rs  shiftsden.rs  shiftsien.rs  shiftstat.rs  timcfg.rs  timcmp.rs  timctl.rs  timien.rs  timstat.rs  verid.rs
pac/src/ftfa/: fccob.rs  fcnfg.rs  fopt.rs  fprot.rs  fsec.rs  fstat.rs
(+983 files in other folders)
