[package]
name = "pac"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", optional = false }
cortex-m-rt = "0.7.3"
critical-section = { version = "1.1.3", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
