[package]
name = "pac"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = {version = "0.7.3", optional = true, features = ["device"]}
critical-section = { version = "1.1.3", optional = true }
vcell = "0.1.3"

[features]
default = ["critical-section", "rt"]
rt = ["cortex-m-rt/device"]
